# Training-Reasoning-Models-with-Tunix-GRPO

./: .gitignore  .gitignore:  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Google Tunix Hackathon.ipynb  Makefile  README.md  generate_training_data.py  pyproject.toml  reasoning_rewards.py  reasoning_training_data.json  repo structure.md  requirements-dev.txt  requirements.txt  setup.sh  tunix_reasoning_trainer.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_data_generator.py  test_rewards.py
